--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="assets/css/navbar-fixed.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
@@ -56,12 +57,12 @@
           <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ml-auto text-uppercase">
               <li class="nav-item active">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="#hero-area"
                   >Home <span class="sr-only">(current)</span></a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">about us</a>
+                <a class="nav-link" href="#feature-section">about us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
@@ -210,6 +211,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="assets/js/navbar-fixed.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
